# scribere

./: CODE_OF_CONDUCT.md  Cargo.toml  README.md
src/: codeblock.rs  cowstr.rs  lib.rs  read_dir.rs  write_blocks.rs
src/directory/: dir_iter.rs  dummydir.rs  mod.rs  tmpdir.rs
src/dispatch/: by_attr.rs  mod.rs  monofile.rs  with_default.rs
src/read/: cmark.rs  mod.rs  sourcecode.rs
