[package]
name = "scribere"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = "1.0"
pulldown-cmark = { version = "0.9", optional = true }
tempfile = { version = "3.3", optional = true }

[features]
read_cmark = ["pulldown-cmark"]
read_pandoc = []
dir_tmpdir = ["tempfile"]

full = ["read_cmark", "read_pandoc", "dir_tmpdir"]
default = []
